syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

import "google/protobuf/wrappers.proto";

option go_package = "gitlab.figo.systems/platform/monoskope/monoskope/pkg/api/domain/commanddata";

package commanddata;

// Request to create a new tenant
message CreateTenantCommandData {
  // Name of the tenant
  string name = 1; // required
  // Prefix for namespaces and other resources related to the tenant
  string prefix = 2; // required
}

// Request to update a single tenant
message UpdateTenantCommandData {
  // New name for the tenant
  google.protobuf.StringValue name = 1;
}
